syntax = "proto3";

option java_multiple_files = true;
option java_package = "sustain.synopsis.dht.store.services";

service IngestionService {
    rpc Ingest (IngestionRequest) returns (IngestionResponse);
}

message Entity {
    string entityId = 1;
    int64 fromTs = 2;
    int64 toTs = 3;
    bytes bytes = 4;
}

message IngestionRequest {
    int64 sessionId = 1;
    string datasetId = 2;
    repeated Entity entity = 3;
}

message NodeMapping {
    string entityId = 1;
    string dhtNodeAddress = 2;
}

message IngestionResponse {
    int64 sessionId = 1;
    bool status = 2;
    repeated NodeMapping mapping = 3;
}
